--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+[1.0.3]
+> Introduced a new utility: CRISPRessoCount to count guides representation given a fastq or fastq.gz file
+
 [1.0.2]
 > Fixed function that removed characters not allowed  forcing the name to become lowercase and causing problem with CRISPRessoPooled
 
