--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+[1.0.10]
+> Fixed bug in CRISPResso when writing the Quantification_of_editing_frequency.txt file. 'nan's in the np.sum cause the writing to fail, resulting in no output.
+
 [1.0.9]
 > Implemented parameter 'bowtie2_options_string' in CRISPRessoPooled for changing parameters passed to bowtie2
 > Added debug functionality to print most common unaligned reads in cases
